--- a/src/SDL2_TEST.cbp
+++ b/src/SDL2_TEST.cbp
@@ -48,11 +48,14 @@
 			<Add directory="../../../Documents/sdl2/SDL2_image-devel-2.8.5-mingw/SDL2_image-2.8.5/x86_64-w64-mingw32/lib" />
 		</Linker>
 		<Unit filename="../include(headerfile)/RenderDuck.hpp" />
+		<Unit filename="../include(headerfile)/RenderObstacle.hpp" />
 		<Unit filename="../include(headerfile)/RenderWindow.hpp" />
 		<Unit filename="../res/graphic/background.png" />
 		<Unit filename="../res/graphic/ducksheet.png" />
+		<Unit filename="../res/graphic/obstacle.png" />
 		<Unit filename="main.cpp" />
 		<Unit filename="renderduck.cpp" />
+		<Unit filename="renderobstacle.cpp" />
 		<Unit filename="renderwindow.cpp" />
 		<Extensions>
 			<lib_finder disable_auto="1" />
