dieu chinh toc do game

--- a/src/SDL2_TEST.cbp
+++ b/src/SDL2_TEST.cbp
@@ -47,15 +47,53 @@
 			<Add directory="../../../Documents/sdl2/SDL2-devel-2.0.5-mingw/SDL2-2.0.5/x86_64-w64-mingw32/lib" />
 			<Add directory="../../../Documents/sdl2/SDL2_image-devel-2.8.5-mingw/SDL2_image-2.8.5/x86_64-w64-mingw32/lib" />
 		</Linker>
+		<Unit filename="../include(headerfile)/GameMenu.hpp" />
 		<Unit filename="../include(headerfile)/RenderDuck.hpp" />
 		<Unit filename="../include(headerfile)/RenderObstacle.hpp" />
+		<Unit filename="../include(headerfile)/RenderObstacle2.hpp" />
+		<Unit filename="../include(headerfile)/RenderObstacle3.hpp" />
+		<Unit filename="../include(headerfile)/RenderObstacle4.hpp" />
+		<Unit filename="../include(headerfile)/RenderObstacle5.hpp" />
 		<Unit filename="../include(headerfile)/RenderWindow.hpp" />
+		<Unit filename="../include(headerfile)/Timer.hpp" />
+		<Unit filename="../include(headerfile)/endtime.hpp" />
+		<Unit filename="../include(headerfile)/point.hpp" />
+		<Unit filename="../res/background_music.mp3" />
+		<Unit filename="../res/graphic/0.png" />
+		<Unit filename="../res/graphic/1.png" />
+		<Unit filename="../res/graphic/2.png" />
+		<Unit filename="../res/graphic/3.png" />
+		<Unit filename="../res/graphic/4.png" />
+		<Unit filename="../res/graphic/5.png" />
+		<Unit filename="../res/graphic/6.png" />
+		<Unit filename="../res/graphic/7.png" />
+		<Unit filename="../res/graphic/8.png" />
+		<Unit filename="../res/graphic/9.png" />
+		<Unit filename="../res/graphic/again_button.png" />
 		<Unit filename="../res/graphic/background.png" />
+		<Unit filename="../res/graphic/character1_spritesheet.png" />
+		<Unit filename="../res/graphic/character2_spritesheet.png" />
+		<Unit filename="../res/graphic/colon.png" />
 		<Unit filename="../res/graphic/ducksheet.png" />
 		<Unit filename="../res/graphic/obstacle.png" />
+		<Unit filename="../res/graphic/obstacle2.jpg" />
+		<Unit filename="../res/graphic/obstacle3.png" />
+		<Unit filename="../res/graphic/obstacle4.png" />
+		<Unit filename="../res/graphic/obstacle5.jpg" />
+		<Unit filename="../res/graphic/quit_button.png" />
+		<Unit filename="../res/graphic/start_button.png" />
+		<Unit filename="../res/graphic/title.png" />
+		<Unit filename="GameMenu.cpp" />
+		<Unit filename="Timer.cpp" />
+		<Unit filename="endtime.cpp" />
 		<Unit filename="main.cpp" />
+		<Unit filename="point.cpp" />
 		<Unit filename="renderduck.cpp" />
 		<Unit filename="renderobstacle.cpp" />
+		<Unit filename="renderobstacle2.cpp" />
+		<Unit filename="renderobstacle3.cpp" />
+		<Unit filename="renderobstacle4.cpp" />
+		<Unit filename="renderobstacle5.cpp" />
 		<Unit filename="renderwindow.cpp" />
 		<Extensions>
 			<lib_finder disable_auto="1" />
