--- a/src/SDL2_TEST.cbp
+++ b/src/SDL2_TEST.cbp
@@ -54,11 +54,13 @@
 		<Unit filename="../include(headerfile)/RenderObstacle3.hpp" />
 		<Unit filename="../include(headerfile)/RenderObstacle4.hpp" />
 		<Unit filename="../include(headerfile)/RenderObstacle5.hpp" />
+		<Unit filename="../include(headerfile)/RenderObstacle6.hpp" />
 		<Unit filename="../include(headerfile)/RenderWindow.hpp" />
 		<Unit filename="../include(headerfile)/Timer.hpp" />
-		<Unit filename="../include(headerfile)/endtime.hpp" />
 		<Unit filename="../include(headerfile)/point.hpp" />
 		<Unit filename="../res/background_music.mp3" />
+		<Unit filename="../res/crashed_sound.mp3" />
+		<Unit filename="../res/game_over.mp3" />
 		<Unit filename="../res/graphic/0.png" />
 		<Unit filename="../res/graphic/1.png" />
 		<Unit filename="../res/graphic/2.png" />
@@ -80,12 +82,14 @@
 		<Unit filename="../res/graphic/obstacle3.png" />
 		<Unit filename="../res/graphic/obstacle4.png" />
 		<Unit filename="../res/graphic/obstacle5.jpg" />
+		<Unit filename="../res/graphic/obstacle6.png" />
+		<Unit filename="../res/graphic/player1_win.png" />
+		<Unit filename="../res/graphic/player2_win.png" />
 		<Unit filename="../res/graphic/quit_button.png" />
 		<Unit filename="../res/graphic/start_button.png" />
 		<Unit filename="../res/graphic/title.png" />
 		<Unit filename="GameMenu.cpp" />
 		<Unit filename="Timer.cpp" />
-		<Unit filename="endtime.cpp" />
 		<Unit filename="main.cpp" />
 		<Unit filename="point.cpp" />
 		<Unit filename="renderduck.cpp" />
@@ -94,6 +98,7 @@
 		<Unit filename="renderobstacle3.cpp" />
 		<Unit filename="renderobstacle4.cpp" />
 		<Unit filename="renderobstacle5.cpp" />
+		<Unit filename="renderobstacle6.cpp" />
 		<Unit filename="renderwindow.cpp" />
 		<Extensions>
 			<lib_finder disable_auto="1" />
